--- a/myclass_sub_inner.html
+++ b/myclass_sub_inner.html
@@ -10,6 +10,14 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
+<style type="text/css">
+	.overlay1{
+		height: 97%;
+	}
+	img.play_button_main_overlay1{
+		    margin-top: 25%;
+	}
+</style>
 <body>
 <div class="container col-md-12 col-sm-12 col-xs-12">
 <div class="col-md-12 col-sm-12 col-xs-12 myclass_sub_frst">
@@ -93,7 +101,7 @@
 
 <div class="container col-md-12 col-sm-12 col-xs-12 maine_page_myclasssub">
 <div class="col-md-12 col-sm-12 col-xs-12">
-<p class="myclass_sub_inner_main tsemibold">Chapter 1</p>
+<p class="myclass_sub_inner_main tsemibold">CHAPTER 1</p>
 <div class="col-md-4 col-sm-4 col-xs-12">
 <div class="video2">
 <video class="video" style="width:100%;"><source src="vido.mp4"></video>
@@ -103,6 +111,9 @@
 <p class="tsemibold frst_video_inner_1">Chapter 7,Class IX</p>
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
+</div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
 </div>
 </div>
 
@@ -115,6 +126,9 @@
 <p class="tsemibold frst_video_inner_1">Chapter 7,Class IX</p>
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
+</div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
 </div>
 </div>
 
@@ -131,6 +145,9 @@
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
 </div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
+</div>
 </div>
 
 
@@ -142,6 +159,9 @@
 <p class="tsemibold frst_video_inner_1">Chapter 7,Class IX</p>
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
+</div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
 </div>
 </div>
 </div>
@@ -155,6 +175,9 @@
 <p class="tsemibold frst_video_inner_1">Chapter 7,Class IX</p>
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
+</div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
 </div>
 </div>
 
@@ -166,7 +189,7 @@
 <!-- ------------------------chapter2---------------------------------- -->
 
 <div class="col-md-12 col-sm-12 col-xs-12">
-<p class="myclass_sub_inner_main tsemibold">Chapter 2</p>
+<p class="myclass_sub_inner_main tsemibold">CHAPTER 2</p>
 <div class="col-md-4 col-sm-4 col-xs-12">
 <div class="video2">
 <video class="video" style="width:100%;"><source src="vido.mp4"></video>
@@ -176,6 +199,9 @@
 <p class="tsemibold frst_video_inner_1">Chapter 7,Class IX</p>
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
+</div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
 </div>
 </div>
 
@@ -188,6 +214,9 @@
 <p class="tsemibold frst_video_inner_1">Chapter 7,Class IX</p>
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
+</div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
 </div>
 </div>
 
@@ -204,6 +233,9 @@
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
 </div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
+</div>
 </div>
 
 
@@ -215,6 +247,9 @@
 <p class="tsemibold frst_video_inner_1">Chapter 7,Class IX</p>
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
+</div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
 </div>
 </div>
 </div>
@@ -228,6 +263,9 @@
 <p class="tsemibold frst_video_inner_1">Chapter 7,Class IX</p>
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
+</div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
 </div>
 </div>
 
@@ -237,7 +275,7 @@
 
 <!-- -------------------------chapter 3 ----------------------------- -->
 <div class="col-md-12 col-sm-12 col-xs-12">
-<p class="myclass_sub_inner_main tsemibold">Chapter 3</p>
+<p class="myclass_sub_inner_main tsemibold">CHAPTER 3</p>
 <div class="col-md-4 col-sm-4 col-xs-12">
 <div class="video2">
 <video class="video" style="width:100%;"><source src="vido.mp4"></video>
@@ -247,6 +285,9 @@
 <p class="tsemibold frst_video_inner_1">Chapter 7,Class IX</p>
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
+</div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
 </div>
 </div>
 
@@ -259,6 +300,9 @@
 <p class="tsemibold frst_video_inner_1">Chapter 7,Class IX</p>
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
+</div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
 </div>
 </div>
 
@@ -275,6 +319,9 @@
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
 </div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
+</div>
 </div>
 
 
@@ -286,6 +333,9 @@
 <p class="tsemibold frst_video_inner_1">Chapter 7,Class IX</p>
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
+</div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
 </div>
 </div>
 </div>
@@ -299,6 +349,9 @@
 <p class="tsemibold frst_video_inner_1">Chapter 7,Class IX</p>
 <img src="images/login/play.png" class="play play_button_main_overlay1">
 
+</div>
+<div class="overlay_time">
+<p class="tsemibold second_overly">18:27</p>
 </div>
 </div>
 
@@ -323,6 +376,7 @@
 			vid.paused?vid.play():vid.pause();
 			// $(this).parent().prev()[0].pause();
 			console.log($(this).parent().prev());
+			$(".overlay_time").hide();
 		
 	})
 
