--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
                         </ul>
                     </div>
                 </div>
+                <img src="images/images1.png" class="center-block frst_page_logo">
                 </div>
-                   <img src="images/images1.png" class="center-block frst_page_logo">
+                   <!-- <img src="images/images1.png" class="center-block frst_page_logo"> -->
 
 
 
@@ -105,7 +106,7 @@
 <div class="col-md-8 col-sm-8 col-xs-12">
 <p class="text-center second_page_about" id="about">About</p>
 <p class="text-center second_page_about_inner">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. </p>
-<p class="text-center second_page_about_inner">Features of Attrac, <span class="tblack">MY</span> Class:</p>
+<p class="text-center second_page_about_inner">Features of googlewiki, <span class="tblack">MY</span> Class:</p>
 
 </div>
 <div class="col-md-2 col-sm-2 "></div>
@@ -254,7 +255,7 @@ tablets</p>
 <div class="col-md-8 col-sm8 col-xs-12">
 <p class="text-center fourth_page_box_content_inner">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. </p>
 
-<p class="text-center second_page_box_content_inner images_margin">Features of Attrac, <span class="tblack">MY</span> Class for schools:</p>
+<p class="text-center second_page_box_content_inner images_margin">Features of googlewiki, <span class="tblack">MY</span> Class for schools:</p>
 
 <div class="col-md-12 col-sm-12 col-xs-12">
 <div class="col-md-2 col-sm-2"></div>
@@ -312,7 +313,7 @@ tablets</p>
 <div class="col-md-8 col-sm8 col-xs-12">
 <p class="text-center fourth_page_box_content_inner">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. </p>
 
-<p class="text-center second_page_box_content_inner images_margin">Features of Attrac, <span class="tblack">MY</span> Class with tablet:</p>
+<p class="text-center second_page_box_content_inner images_margin">Features of googlewiki, <span class="tblack">MY</span> Class with tablet:</p>
 
 <div class="col-md-12 col-sm-12 col-xs-12">
 <div class="col-md-2 col-sm-2"></div>
@@ -367,7 +368,7 @@ tablets</p>
 <div class="col-md-8 col-sm8 col-xs-12">
 <p class="text-center fourth_page_box_content_inner">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. </p>
 
-<p class="text-center second_page_box_content_inner images_margin">Features of Attrac, <span class="tblack">MY</span> Class for individual subscription:</p>
+<p class="text-center second_page_box_content_inner images_margin">Features of googlewiki, <span class="tblack">MY</span> Class for individual subscription:</p>
 
 <div class="col-md-12 col-sm-12 col-xs-12">
 <div class="col-md-2 col-sm-2"></div>
@@ -514,27 +515,27 @@ tablets</p>
 <div class="col-md-1 col-sm-1"></div>
 <div class="col-md-3 col-sm-3 col-xs-12">
 <img src="images/images31.png" class="center-block">
-<p class="text-center contact_page_numbr tthin">+919900486262</p>
+<p class="text-center contact_page_numbr tthin">+917090037073</p>
 
 </div>
 <div class="col-md-3 col-sm-3"></div>
 <div class="col-md-3 col-sm-3 col-xs-12">
 <img src="images/images32.png" class="center-block">
-<p class="text-center contact_page_numbr tthin">write@myclass.com</p>
+<p class="text-center contact_page_numbr tthin">design@googlewiki.in</p>
 
 </div>
 <div class="col-md-2 col-sm-2"></div>
 <div class="col-md-12 col-sm-12 col-xs-12 contact_page_adres">
 <img src="images/images34.png" class="center-block">
 
- <a target="_blank" href="https://www.google.co.in/maps/@12.8888494,77.6372593,17z" target='_blank' title="Click to see this area on Google Maps" style="position: static; overflow: visible; float: none; display: inline;"><span class="text-center center-block contact_inner3 source_light">Sourabha complex,#5,A M Industrial Estate,12th KM Stone, <br>Hosur Road, Near Kudlu Gate, <br>
-Garevebhavi Palya, Bangalore - 560068</span></a>
+ <a target="_blank" href="https://www.google.co.in/maps/@12.9103037,77.6026796,15z" target='_blank' title="Click to see this area on Google Maps" style="position: static; overflow: visible; float: none; display: inline;"><span class="text-center center-block contact_inner3 source_light">BTM 2nd Stage, <br>
+ Bangalore - 560076</span></a>
 
 
 <!-- <p class="text-center ">Sourabha complex,#5,A M Industrial Estate,12th KM Stone, <br>Hosur Road, Near Kudlu Gate, <br>
 Garevebhavi Palya, Bangalore - 560068</p> -->
 
-<p class="text-center contact_page_last">Copyright reserved @<span class="attrc_link"><a href="http://attrac.in/" target="_blank"> attrac.in</a></span></p>
+<p class="text-center contact_page_last">Copyright reserved @<span class="attrc_link"><a href="http://googlewiki.in/" target="_blank"> googlewiki.in</a></span></p>
 </div>
 
 </div>
