--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script>
         new WOW().init();
     </script>
@@ -22,25 +23,9 @@
         <div class="col-md-12 col-sm-12 col-xs-12" style="padding:0;">
             <!-- -----------------nav bar-------------------------------------- -->
             <div class="col-md-12 col-sm-12 col-xs-12 home_nav">
-                <div class="col-md-8 col-sm-8"></div>
-                <div class="col-md-4 col-sm-4 col-xs-12">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <div class="collapse navbar-collapse" id="myNavbar">
-                        <ul class="nav navbar-nav raleway_regular tregular">
-                            <li><a data-scroll data-options='{ "easing": "linear" }' href="#about"><span class="menu_homepage ">ABOUT</span></a></li>
-                            <li><a data-scroll data-options='{ "easing": "linear" }' href="#subscription"><span class="menu_homepage">SUBSCRIPTION</span></a></li>
-                            <li><a data-scroll data-options='{ "easing": "linear" }' href="#contact"><span class="menu_homepage">CONTACT</span></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <a href="http://googlewiki.in/" class="googlewiki_logo">
-                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="70.000000pt" height="75.000000pt" viewBox="0 0 300.000000 205.000000" preserveAspectRatio="xMidYMid meet">
+                <div class="col-md-6 col-sm-6">
+                    <a href="http://googlewiki.in/" class="googlewiki_logo">
+                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="50.000000pt" height="55.000000pt" viewBox="0 0 300.000000 205.000000" preserveAspectRatio="xMidYMid meet">
                         <metadata>
                             Created by potrace 1.10, written by Peter Selinger 2001-2011
                         </metadata>
@@ -58,6 +43,23 @@
                         </g>
                     </svg>
                 </a>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div class="collapse navbar-collapse" id="myNavbar">
+                        <ul class="nav navbar-nav raleway_regular tregular">
+                            <li><a data-scroll data-options='{ "easing": "linear" }' href="#about"><span class="menu_homepage ">ABOUT</span></a></li>
+                            <li><a data-scroll data-options='{ "easing": "linear" }' href="#subscription"><span class="menu_homepage">SUBSCRIPTION</span></a></li>
+                            <li><a data-scroll data-options='{ "easing": "linear" }' href="#contact"><span class="menu_homepage">CONTACT</span></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -399,7 +401,7 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/smooth-scroll.js"></script>
     <script>
-    smoothScroll.init();
+        smoothScroll.init();
     </script>
 </body>
 
